@@ -47,7 +47,6 @@ object LateOct2013CfLineSpec {
     "2013-10-22 00:41:30.000",
     "2013-10-22 00:41:53.725",
     "page_view",
-    null, // No event vendor set
     null, // We can't predict the event_id
     "888087",
     null, // No tracker namespace
@@ -96,7 +95,6 @@ object LateOct2013CfLineSpec {
     null, //
     null, //
     null, // Unstructured event fields empty
-    null, //
     null, // Transaction fields empty 
     null, //
     null, //
